kubernetes/apps/utilities/calendar/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: calendar
  namespace: utilities
spec:
  type: ClusterIP
  ports:
    - port: 10020
      targetPort: 10020
  selector:
    app: calendar
