kubernetes/apps/utilities/calendar/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: utilities
  name: calendar
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.rutberg.dev"
spec:
  ingressClassName: external
  rules:
    - host: calendar.rutberg.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calendar
                port:
                  number: 10020
